[gd_scene load_steps=11 format=2]

[ext_resource path="res://game/enemies/EnemyBandit.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/enemies/EnemyFree.gd" type="Script" id=2]
[ext_resource path="res://assets/enemies/free/telepor_ring_1.png" type="Texture" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.995516 )
colors = PoolColorArray( 1, 1, 1, 0.705882, 0, 0, 0, 0.188235 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, -0.836319, 0, 0, Vector2( 1, 0 ), -1.09339, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
resource_local_to_scene = true
flag_disable_z = true
direction = Vector3( 0, 100, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 400.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Animation" id=6]
resource_name = "init"
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteTeleportRing:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "spawn_ring"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteTeleportRing:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteTeleportRing:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 0.3 ), Vector2( 0.927302, 0.213993 ), Vector2( 1.3, 0.3 ), Vector2( 0.477686, 0.110235 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteTeleportRing:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 5.65685, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="EnemyFree" instance=ExtResource( 1 )]
script = ExtResource( 2 )
cuadrant = 15

[node name="Motor" parent="." index="10"]
position = Vector2( 0, -25 )
emitting = false
process_material = SubResource( 5 )

[node name="NewPositionTimer" type="Timer" parent="." index="12"]
wait_time = 2.0
one_shot = true

[node name="SpriteTeleportRing" type="Sprite" parent="." index="13"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -0.308899, -7.58 )
scale = Vector2( 0.477686, 0.110235 )
texture = ExtResource( 3 )

[node name="AnimationTeleport" type="AnimationPlayer" parent="." index="14"]
anims/init = SubResource( 6 )
anims/spawn_ring = SubResource( 7 )
[connection signal="timeout" from="NewPositionTimer" to="." method="_on_NewPositionTimer_timeout"]
